linked to exercises

--- a/index.html
+++ b/index.html
@@ -3,3 +3,5 @@
 <p>
 Saturday Feb 8, 9am-12pm: basics of Python / Numpy (3h, Augustin Cosse)<br>
 </p>
+
+<a href="https://nbviewer.jupyter.org/github/acosse/BootCampPython/blob/master/Bootcamp%20Numpy%20Lab.ipynb">Programming exercises 1</a>
